--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 pkg/*
 *.gem
 .bundle
+config/database.yml
+config/*.sphinx.conf
+*~
+*.cache
+*.log
+autotest
+*.pid
+tmp/**/*
+.DS_Store
+db/*.sqlite3
+doc/api
+doc/app
+doc/plugins
+doc/*.dot
+coverage/*
+*.sw?
+vendor/plugins/ns_web
+Gemfile.lock
